@@ -6,7 +6,6 @@
 
 #include "UserInterface/Components/MainPanel/StopWatch.h"
 
-
 AppsStatusMonitor* AppsStatusMonitor::inst;
 
 AppsStatusMonitor *AppsStatusMonitor::getInstance() {
@@ -21,14 +20,6 @@ void AppsStatusMonitor::registerStopWatchComponent(StopWatch *stopWatch) {
 	this->stopWatch = stopWatch;
 }
 
-void AppsStatusMonitor::registerDateTimeComponent(DateTime *dateTime) {
-	this->dateTime = dateTime;
-}
-
 bool AppsStatusMonitor::isStopWatchRunning() {
 	return this->stopWatch->isRunning();
-}
-
-bool AppsStatusMonitor::isDateTimeAlwaysOn() {
-	return this->dateTime->isSystemSleepForbidden();
 }
