@@ -1,7 +1,6 @@
 #pragma once
 
 #include "UserInterface/Components/MainPanel/StopWatch.h"
-#include "UserInterface/Components/MainPanel/DateTime.h"
 
 class AppsStatusMonitor {
 
@@ -13,17 +12,11 @@ class AppsStatusMonitor {
 
 		void registerStopWatchComponent(StopWatch *stopWatch);
 
-		void registerDateTimeComponent(DateTime *dateTime);
-
-		bool isDateTimeAlwaysOn();
-
 	protected:
 
 		static AppsStatusMonitor *inst;
 
 		StopWatch *stopWatch;
-
-		DateTime *dateTime;
 
 		AppsStatusMonitor() {
 
