@@ -4,18 +4,18 @@
 
 #include <LilyGoWatch.h>
 
-#include "System/AppsStatusMonitor.h"
+#include "Environment/AppSettings.h"
 #include "UserInterface/Icons/LightBulb.h"
 #include "UserInterface/UserInterfaceManager.h"
 
 void DisplayOn::render() {
 
-	if (AppsStatusMonitor::getInstance()->isDateTimeAlwaysOn() != this->prevState) {
-		if (AppsStatusMonitor::getInstance()->isDateTimeAlwaysOn() == true) {
+	if (AppSettings::getInstance()->getAlwaysOn() != this->prevState) {
+		if (AppSettings::getInstance()->getAlwaysOn() == true) {
 			UserInterfaceManager::getInstance()->renderIcon(iconLightBulb, POS_X, POS_Y);
 		} else {
 			TTGOClass::getWatch()->tft->fillRect(POS_X, POS_Y, 18, 22, COLOR_BACKGROUND);
 		}
-		this->prevState = AppsStatusMonitor::getInstance()->isDateTimeAlwaysOn();
+		this->prevState = AppSettings::getInstance()->getAlwaysOn();
 	}
 }
