@@ -4,7 +4,6 @@
 #include "UserInterface/Components/MainPanel/Calendar.h"
 #include "UserInterface/Components/MainPanel/StopWatch.h"
 #include "UserInterface/Components/MainComponent.h"
-#include "System/AppsStatusMonitor.h"
 
 class MainPanel {
 
@@ -30,7 +29,6 @@ class MainPanel {
 
 		void createApps() {
 			DateTime *dt = new DateTime();
-			AppsStatusMonitor::getInstance()->registerDateTimeComponent(dt);
 			this->apps[0] = dt;
 			this->apps[1] = new Calendar();
 			this->apps[2] = new StopWatch();
